ngForm Desafios / Eventos

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -96,44 +96,76 @@
               <div id="port" class="row" style="margin-left: 15px; margin-top:25px;">
                   <h4 style="color: #72A5FF;"><b>Desafios</b></h4>
               </div>
-          </div>
-              <div class="row" id="border">
-                  <div class="container">
-                      <div class="row blog">
-                          <div class="col-md-12">
-                              <div id="blogCarousel" class="carousel slide" data-ride="carousel">
-  
-                                  <!-- Carousel items -->
-                                  <div class="carousel-inner">
-  
-                                      <div class="carousel-item active">
-                                          <div class="row">
-                                              <div class="container-desafio">
-                                                <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
-                                                <div class="middle-desafio">
-                                                  <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="search" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="favorite" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="bubble" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="calendarToday" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target="#MentorDesafio"><img class="btn-desafio" [src]="personAdd" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target="#CompDesafio"><img class="btn-desafio" [src]="share" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="star" alt="Image"></a><br/>
-                                                  <a href="#0" data-toggle="modal" data-target="#Tchun"><img class="btn-desafio" style="transform: rotate(270deg);" [src]="wifi" alt="Image"></a><br/>
-                                                </div>
+            </div>
+            <div class="row" id="border">
+                <div class="container">
+                    <div class="row blog">
+                        <div class="col-md-12">
+                            <div id="blogCarousel" class="carousel slide" data-ride="carousel">
+
+                                <!-- Carousel items -->
+                                <div class="carousel-inner">
+
+                                    <div class="carousel-item active">
+                                        <div class="row">
+                                            <div class="container-desafio">
+                                              <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
+                                              <div class="middle-desafio">
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="search" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="favorite" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="bubble" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="calendarToday" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#MentorDesafio"><img class="btn-desafio" [src]="personAdd" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#CompDesafio"><img class="btn-desafio" [src]="share" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="star" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#Tchun"><img class="btn-desafio" style="transform: rotate(270deg);" [src]="wifi" alt="Image"></a><br/>
                                               </div>
-                                              <div class="col">
-                                              </div>
-                                              <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
-                                                style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
-                                          </div>
-                                          <!--.row-->
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                                            </div>
+                                            <div class="col">
+                                            </div>
+                                            <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                              style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
+                                        </div>
+                                        <!--.row-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="eventos">
+              <div id="port" class="row" style="margin-left: 15px; margin-top:25px;">
+                  <h4 style="color: #72A5FF;"><b>Próximos Eventos</b></h4>
               </div>
+            </div>
+            <div class="row" id="border">
+                <div class="container">
+                    <div class="row blog">
+                        <div class="col-md-12">
+                            <div id="blogCarousel" class="carousel slide" data-ride="carousel">
+
+                                <!-- Carousel items -->
+                                <div class="carousel-inner">
+
+                                    <div class="carousel-item active">
+                                        <div class="row">
+                                            <div class="container-desafio">
+                                              <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
+                                            </div>
+                                            <div class="col">
+                                              </div>
+                                            <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                              style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
+                                        </div>
+                                        <!--.row-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <br />
         <div style="color: blue">        
@@ -318,12 +350,12 @@
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="ideia" aria-describedby="basic-addon3" 
           placeholder="Digite o(s) nome(s) ou apelido(s) do(s) colega(s) ou professor(es)" 
-          style="border-radius: 15px; color: #8E959B; height: 60px;" [(ngModel)]="option7" required>
+          style="border-radius: 15px; color: #8E959B; height: 60px;" name="nomecomp" [(ngModel)]="nomecomp" required>
         </div>
         <div class="input-group">
           <textarea class="form-control" rows="7" id="ideia" aria-label="With textarea" 
-          placeholder="Mensagem (opcional) sobre o desafio que está compartilhando" 
-          style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="option6" required></textarea>
+          placeholder="Mensagem (opcional) sobre o desafio que está compartilhando" name="msgcomp"
+          style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="msgcomp" required></textarea>
         </div>
       </form>
       </div>
@@ -472,7 +504,7 @@
       <div class="modal-body" style="text-align: center;">
         <form #mentoria="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <select class="form-control" id="sel1" style="border-radius: 15px; color: #8E959B; height: 60px;" [(ngModel)]="area" required>
+            <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="area" [(ngModel)]="area" required>
               <option hidden disabled selected>Escolha a área para a qual deseja mentoria</option>
               <option>Administração e Negócios</option>
               <option>Artes e Moda</option>
@@ -480,7 +512,7 @@
             </select>
           </div>
           <div class="form-group">
-            <select class="form-control" id="sel2" style="border-radius: 15px; color: #8E959B; height: 60px;" [(ngModel)]="mentor" required>
+            <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="mentor" [(ngModel)]="mentor" required>
               <option hidden disabled selected>Escolha um mentor</option>
               <option>Bill Gates</option>
               <option>Robert Downey Jr.</option>
@@ -489,7 +521,7 @@
           </div>
         <div class="input-group">
           <textarea class="form-control scrll" rows="7" id="ideia" aria-label="With textarea" 
-            placeholder="Descreva como o mentor pode ajudá-lo neste projeto"
+            placeholder="Descreva como o mentor pode ajudá-lo neste projeto" name="texto"
             style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="texto" required></textarea>
         </div>
       </form>
