--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -47,6 +47,14 @@
     margin-left: -60px;
 }
 
+#ultimasnoticias{
+    margin-left: 3%;
+}
+
+#desafios{
+    margin-left: -6%;
+}
+
 #port{
     color: white;
 
@@ -256,54 +264,17 @@ background: #707070;
      background-image: linear-gradient(to bottom, #00406b, #000305);
      filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#00406b, endColorstr=#000305);
     }
-    .container {
-      display: block;
-      position: relative;
-      cursor: pointer;
-      font-size: 18px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
     
-    /* Hide the browser's default radio button */
-    .container input {
-      position: absolute;
-      opacity: 0;
-      cursor: pointer;
+    .boxmodel {
+        width: 300px;
+        height: 150px;
+        background: #0366BB;
+        color: #FFF;
+        padding: 5px;
+        border: 1px solid #0366BB;
+        margin-right: 35%;
+        margin-top: 5%;
+        margin-bottom: 3%
+
     }
-    
-    .checkmark {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 25px;
-      width: 25px;
-      background-color: #eee;
-      border-radius: 50%;
-    }
-    
-    .container:hover input ~ .checkmark {
-      background-color: #ccc;
-    }
-    
-    .container input:checked ~ .checkmark {
-      background-color: #2196F3;
-    }
-    
-    .checkmark:after {
-      content: "";
-      position: absolute;
-      display: none;
-    }
-    
-    .container input:checked ~ .checkmark:after {
-      display: block;
-    }
-  
-    .custom-select{
-      -webkit-border-radius: 30px;
-      -moz-border-radius: 30px;
-      border-radius: 30px;
-    }
+   
