--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -136,9 +136,11 @@
               </div>
         </div>
         <br />
-        <div style="color: blue">        
-          <h5>Últimas Noticías</h5>   
-          </div> 
+        <div class="row" id="ultimasnoticias">
+          <div id="port" class="row">
+              <h4 style="color: #72A5FF;"><b>Últimas Noticías</b></h4>
+          </div>
+      </div>
           <div class="container">
               <div class="row">
                 <div class="col-md-6">
@@ -345,29 +347,33 @@
         <form #radio="ngForm" (ngSubmit)="onSubmit()">
 <div class="row">
   <div class="col">
-<label class="container">Com projeto
-  <input type="radio" name="radio" id="ideia" value="option1" [(ngModel)]="option1" required>
-  <span class="checkmark"></span>
-</label>
-</div>
+<div class="custom-control custom-radio">
+    <input type="radio" class="custom-control-input" id="defaultGroupExample1" name="groupOfDefaultRadios" value="option1" [(ngModel)]="option1" required>
+    <label class="custom-control-label" for="defaultGroupExample1">Com projeto</label>
+  </div>
+</div> 
+
 <div class="col">
-<label class="container">Com ideia
-  <input type="radio" name="radio" id="projeto" value="option2" onclick="return false;">
-  <span class="checkmark"></span>
-</label>
+  <div class="custom-control custom-radio"> 
+    <input type="radio" class="custom-control-input" id="defaultGroupExample2" name="groupOfDefaultRadios" value="option2" onclick="return false;">
+    <label class="custom-control-label" for="defaultGroupExample2">Com ideia</label>
+  </div>
 </div>
+
 <div class="w-100"></div>
+
 <div class="col">
-<label class="container">Com experiência
-  <input type="radio" name="radio" id="ideia" value="option3" onclick="return false;">
-  <span class="checkmark"></span>
-</label>
+  <div class="custom-control custom-radio">
+    <input type="radio" class="custom-control-input" id="defaultGroupExample3" name="groupOfDefaultRadios" value="option3" onclick="return false;">
+    <label class="custom-control-label" for="defaultGroupExample3">Com experiência</label>
+  </div>
 </div>
+
 <div class="col">
-<label class="container">Com formação
-  <input type="radio" name="radio" id="ideia" value="option4" onclick="return false;">
-  <span class="checkmark"></span>
-</label>
+  <div class="custom-control custom-radio">
+      <input type="radio" class="custom-control-input" id="defaultGroupExample4" name="groupOfDefaultRadios" value="option4" onclick="return false;">
+      <label class="custom-control-label" for="defaultGroupExample4">Com formação </label>
+    </div>
 </div>
 </div>
 </form>
@@ -399,17 +405,131 @@
         <br />
           <label> <b> Escolha um dos seus projetos que pode resolver o desafio proposto pelo colaborador Arnaldo Antunes.</b> </label>
         <br/> <br/>
-            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref" [(ngModel)] = "teste">
+        <div>
+            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref"> <!-- [(ngModel)] ="teste"-->
               <option selected>Escolha o seu projeto</option>
               <option value="1">Teste</option>
+              <option value="2">Teste 2</option>
             </select>  
-          <div *ngIf=" teste == 1" class="container">
-            <label>Funcionou </label>
+
+           <!-- *ngIf=" teste == 1" ? -->
+           <img class="boxmodel" src="https://http2.mlstatic.com/projeto-fazer-barcos-canoa-com-fundo-em-v-frete-gratis-D_NQ_NP_19932-MLB20179892561_102014-F.jpg"> 
+            <div class="custom-control custom-checkbox" style="margin-left: 65%; margin-top: -8%">
+                <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                <label class="custom-control-label" for="defaultUnchecked" [(ngModel)]="anexo" checked="false">Incluir Anexos</label>    
           </div>         
+        </div>   
+      </div>
+      <div class="modal-footer" *ngIf="anexo == checked; else notChecked">
+        <button class="btn btn-info btn-send" data-dismiss="modal"  data-toggle="modal"  data-target="#TchunChecked" >Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal">Cancelar</button>
+      </div>
+
+      <ng-template #notChecked>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal"  data-toggle="modal"  data-target="#TchunUnchecked" >Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal">Cancelar</button>
+      </div>
+      </ng-template>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade " id="TchunUnchecked" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title"> DEU TCHUN! </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <br/> <br/> <br/> <br/> <br/> <br/> 
+       <p> Você está TCHUNANDO o projeto SEM ANEXOS. </p> 
+          Deseja TCHUNAR mesmo assim?
+          <br/> <br/> <br/> <br/> <br/> <br/> 
       </div>
       <div class="modal-footer">
         <button class="btn btn-info btn-send" data-dismiss="modal">Enviar</button>
-        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal">Cancelar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#TchunProjeto" >Cancelar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade " id="TchunChecked" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title"> DEU TCHUN! </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <form #Tchunbox="ngForm">
+      <div class="modal-body" style="text-align: center;">
+        <br/> <br/> <br/> <br/> <br/> 
+       <p> Você está TCHUNANDO seu projeto COM ANEXOS. </p> 
+         
+       <p>Você deve revisar e aceitar os nossos <a data-toggle="modal" data-dismiss="modal" href="#TermosDeUso">Termos de Uso</a> </p> 
+       <p>e <a data-toggle="modal" data-dismiss="modal" href="#PoliticaDP">Política de Privacidade</a> para enviar projetos com documentos anexos: </p>
+       <div class="custom-control custom-checkbox mb-3">
+        <input type="checkbox" class="custom-control-input" id="customCheck" name="example1" [(ngModel)]="checkbox" required>
+        <label class="custom-control-label" for="customCheck">Li e aceito os Termos de Uso e Poĺítica de Privacidade</label>
+      </div>
+          <br/> <br/> <br/> <br/> <br/> 
+      </div>
+    </form>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal" [disabled]="Tchunbox.invalid">Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#TchunProjeto">Cancelar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade " id="TermosDeUso" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title"> TERMOS DE USO </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <br/>  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc finibus laoreet dignissim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc eros felis, dapibus vitae gravida non, commodo quis risus. In ut ex a eros iaculis ultrices. Nullam quis lorem a turpis tempus blandit in vel nisl. Vestibulum non viverra arcu. Suspendisse euismod ante non diam condimentum varius eget a mauris. Suspendisse lacinia turpis a mauris efficitur, nec imperdiet orci luctus. Morbi quis efficitur sapien. Integer nec libero vel enim ullamcorper facilisis at quis tortor. Etiam lobortis lacus id volutpat tempor. </p>   
+               <p>Praesent ultrices lectus mauris, ut porttitor justo tincidunt eget. Vivamus at metus in lectus dignissim elementum nec id mi. Donec sed facilisis nisl, sed placerat leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eleifend sollicitudin odio in tincidunt. Sed ultricies diam erat, in volutpat quam pretium id. Praesent sagittis, purus at euismod aliquet, massa nisl fermentum quam, ac mollis enim ligula a tellus. Aenean ipsum urna, mollis eget posuere vitae, varius at nulla. </p>
+               <p> Mauris at urna ac ligula viverra vehicula. Integer ultricies dui vitae luctus mollis. Sed tincidunt velit eu eleifend aliquet. In maximus bibendum ex, sed consectetur nisl maximus eu. Aenean consequat molestie odio a rhoncus. Proin nec congue metus. Nulla facilisi. Mauris sollicitudin dui odio, sed ornare lacus aliquam sed. Phasellus porttitor ipsum sapien, sit amet faucibus turpis viverra quis. Cras vel turpis in tellus pretium viverra at sed sem. In in urna gravida mi vehicula malesuada in vel ante. In fermentum purus massa, pulvinar interdum nulla gravida egestas. </p>
+        <br/> 
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" >Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#TchunProjeto" >Cancelar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade " id="PoliticaDP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title"> Política de Privacidade </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <br/>  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc finibus laoreet dignissim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc eros felis, dapibus vitae gravida non, commodo quis risus. In ut ex a eros iaculis ultrices. Nullam quis lorem a turpis tempus blandit in vel nisl. Vestibulum non viverra arcu. Suspendisse euismod ante non diam condimentum varius eget a mauris. Suspendisse lacinia turpis a mauris efficitur, nec imperdiet orci luctus. Morbi quis efficitur sapien. Integer nec libero vel enim ullamcorper facilisis at quis tortor. Etiam lobortis lacus id volutpat tempor. </p>   
+               <p>Praesent ultrices lectus mauris, ut porttitor justo tincidunt eget. Vivamus at metus in lectus dignissim elementum nec id mi. Donec sed facilisis nisl, sed placerat leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eleifend sollicitudin odio in tincidunt. Sed ultricies diam erat, in volutpat quam pretium id. Praesent sagittis, purus at euismod aliquet, massa nisl fermentum quam, ac mollis enim ligula a tellus. Aenean ipsum urna, mollis eget posuere vitae, varius at nulla. </p>
+               <p> Mauris at urna ac ligula viverra vehicula. Integer ultricies dui vitae luctus mollis. Sed tincidunt velit eu eleifend aliquet. In maximus bibendum ex, sed consectetur nisl maximus eu. Aenean consequat molestie odio a rhoncus. Proin nec congue metus. Nulla facilisi. Mauris sollicitudin dui odio, sed ornare lacus aliquam sed. Phasellus porttitor ipsum sapien, sit amet faucibus turpis viverra quis. Cras vel turpis in tellus pretium viverra at sed sem. In in urna gravida mi vehicula malesuada in vel ante. In fermentum purus massa, pulvinar interdum nulla gravida egestas. </p>
+        <br/> 
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" >Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#TchunProjeto" >Cancelar</button>
       </div>
     </div>
   </div>
