--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -110,15 +110,16 @@
                                         <div class="row">
                                             <div class="container-desafio">
                                               <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
+                                              <div class="text-image">CASCO DE NAVIO COM MÍNIMA RESISTÊNCIA</div>
                                               <div class="middle-desafio">
-                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="search" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="favorite" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="bubble" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="calendarToday" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target="#MentorDesafio"><img class="btn-desafio" [src]="personAdd" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target="#CompDesafio"><img class="btn-desafio" [src]="share" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" [src]="star" alt="Image"></a><br/>
-                                                <a href="#0" data-toggle="modal" data-target="#Tchun"><img class="btn-desafio" style="transform: rotate(270deg);" [src]="wifi" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="search" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="favorite" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="bubble" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="calendarToday" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#MentorDesafio"><img class="btn-desafio" style="filter: invert(1);" [src]="personAdd" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#CompDesafio"><img class="btn-desafio" style="filter: invert(1);" [src]="share" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="star" alt="Image"></a><br/>
+                                                <a href="#0" data-toggle="modal" data-target="#Tchun"><img class="btn-desafio" style="transform: rotate(270deg); filter: invert(1);" [src]="wifi" alt="Image"></a><br/>
                                               </div>
                                             </div>
                                             <div class="col">
@@ -151,7 +152,7 @@
                                     <div class="carousel-item active">
                                         <div class="row">
                                             <div class="container-desafio">
-                                              <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
+                                              <img [src]="imgTeste" alt="Image" class="image-evento" style="max-width: 100%;">
                                             </div>
                                             <div class="col">
                                               </div>
