Footer do Perfil com Modais de Termo de Uso e Politica de Privacidade

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -301,3 +301,12 @@ background: #707070;
 
     }
    
+    .perfil-footer{
+        background-color: #00183A;
+        font-size: 12px; 
+        margin-top: -1%
+    }
+
+    .footer-copyright{
+        color: gray;
+    }
