--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -61,7 +61,7 @@
                 <h4 style="color: #72A5FF;"><b>Meu Portfólio</b></h4>
             </div>
         </div>
-            <div class="row" id="border">
+            <div class="row" id="border" style="margin-right: 0;">
                 <div class="container">
                     <div class="row blog">
                         <div class="col-md-12">
@@ -107,7 +107,7 @@
                                 <div class="carousel-inner">
 
                                     <div class="carousel-item active">
-                                        <div class="row">
+                                        <div class="row" style="margin-left: 0%; margin-right: 0%;">
                                             <div class="container-desafio">
                                               <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
                                               <div class="text-image">Casco de Navio com Mínima Resistência</div>
@@ -123,6 +123,20 @@
                                               </div>
                                             </div>
                                             <div class="col">
+                                                <div class="container-desafio">
+                                                    <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
+                                                    <div class="text-image">Casco de Navio com Mínima Resistência</div>
+                                                    <div class="middle-desafio">
+                                                      <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="search" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="favorite" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target="#EnviarMensagem"><img class="btn-desafio" style="filter: invert(1);" [src]="bubble" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="calendarToday" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target="#MentorDesafio"><img class="btn-desafio" style="filter: invert(1);" [src]="personAdd" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target="#CompDesafio"><img class="btn-desafio" style="filter: invert(1);" [src]="share" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target=""><img class="btn-desafio" style="filter: invert(1);" [src]="star" alt="Image"></a><br/>
+                                                      <a href="#0" data-toggle="modal" data-target="#Tchun"><img class="btn-desafio" style="transform: rotate(270deg); filter: invert(1);" [src]="wifi" alt="Image"></a><br/>
+                                                    </div>
+                                                  </div>
                                             </div>
                                             <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
                                               style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
@@ -142,7 +156,7 @@
             </div>
             <div class="row" id="border">
                 <div class="container">
-                    <div class="row blog">
+                    <div class="row blog" style="margin-right: 0px;">
                         <div class="col-md-12">
                             <div id="blogCarousel" class="carousel slide" data-ride="carousel">
 
@@ -150,7 +164,7 @@
                                 <div class="carousel-inner">
 
                                     <div class="carousel-item active">
-                                        <div class="row">
+                                        <div class="row" style="margin-left: 0px;">
                                             <div class="container-desafio">
                                               <img [src]="imgTeste" alt="Image" class="image-evento" style="max-width: 100%;">
                                             </div>
