--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -56,7 +56,7 @@
 }
 
 #ultimasnoticias {
-    margin-left: 10%;
+    margin-left: 15px;
 }
 
 #desafios {
@@ -220,7 +220,7 @@
     opacity: 0;
     position: absolute;
     top: 50%;
-    left: 95.5%;
+    left: 47.7%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
@@ -323,4 +323,3 @@
     font-size: 12px; 
     margin-top: -1%
 }
-
