--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -101,7 +101,7 @@
     </div>
     <div class="row">
       <div class="col" style="max-width: 930px;">
-        <div id="carousel-desafio" class="carousel slide" data-ride="carousel">
+        <div id="carousel-desafio" class="carousel slide" data-ride="carousel" data-interval="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="container-desafio">
@@ -364,36 +364,36 @@
     </div>
   </div>
 
-<div class="modal fade" id="CompDesafio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-dialog-centered" role="document">
-  <div class="modal-content" style="border-radius: 30px">
-    <div class="modal-header modal-top">
-      <h5 class="desafio-title">COMPARTILHAR DESAFIO</h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true" class="x">X</span></button>
-    </div>
-    <div class="modal-body" style="text-align: center;">
-      <form #compartilhar="ngForm" (ngSubmit)="onSubmit()">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" id="ideia" aria-describedby="basic-addon3" 
-        placeholder="Digite o(s) nome(s) ou apelido(s) do(s) colega(s) ou professor(es)" 
-        style="border-radius: 15px; color: #8E959B; height: 60px;" name="nomecomp" [(ngModel)]="nomecomp" required>
+  <div class="modal fade" id="CompDesafio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title">COMPARTILHAR DESAFIO</h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
       </div>
-      <div class="input-group">
-        <textarea class="form-control" rows="7" id="ideia" aria-label="With textarea" 
-        placeholder="Mensagem (opcional) sobre o desafio que está compartilhando" name="msgcomp"
-        style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="msgcomp" required></textarea>
+      <div class="modal-body" style="text-align: center;">
+        <form #compartilhar="ngForm" (ngSubmit)="onSubmit()">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" id="ideia" aria-describedby="basic-addon3" 
+          placeholder="Digite o(s) nome(s) ou apelido(s) do(s) colega(s) ou professor(es)" 
+          style="border-radius: 15px; color: #8E959B; height: 60px;" name="nomecomp" [(ngModel)]="nomecomp" required>
+        </div>
+        <div class="input-group">
+          <textarea class="form-control" rows="7" id="ideia" aria-label="With textarea" 
+          placeholder="Mensagem (opcional) sobre o desafio que está compartilhando" name="msgcomp"
+          style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="msgcomp" required></textarea>
+        </div>
+      </form>
       </div>
-    </form>
-    </div>
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" 
-        data-target="#CompSucesso" [disabled]="compartilhar.invalid">Enviar</button>
-      <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#CompCancelar">Cancelar</button>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" 
+          data-target="#CompSucesso" [disabled]="compartilhar.invalid">Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#CompCancelar">Cancelar</button>
+      </div>
     </div>
   </div>
-</div>
 </div>
 
 <div class="modal fade" id="CompCancelar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -601,11 +601,12 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
 
 <div class="modal fade " id="TermosDeUso" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-xl modal-dialog-centered" role="document">
   <div class="modal-content" style="border-radius: 30px">
     <div class="modal-header modal-top">
       <h5 class="desafio-title"> TERMOS DE USO </h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" aria-label="Close">
+      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" 
+        aria-label="Close" style="right: -2%; margin-top: -3%;"> 
         <span aria-hidden="true" class="x">X</span></button>
     </div>
     <div class="modal-body" style="text-align: center;">
@@ -624,11 +625,11 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
 
 <div class="modal fade " id="TermosDeUso2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-xl modal-dialog-centered" role="document">
   <div class="modal-content" style="border-radius: 30px">
     <div class="modal-header modal-top">
       <h5 class="desafio-title"> TERMOS DE USO </h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close" style="right: -2%; margin-top: -3%;">
         <span aria-hidden="true" class="x">X</span></button>
     </div>
     <div class="modal-body" style="text-align: center;">
@@ -638,19 +639,20 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
       <br/> 
     </div>
     <div class="modal-footer">
-      <button class="btn btn-info btn-send" style="margin-left: 25%; margin-bottom: 5%" data-dismiss="modal">OK</button>
+      <button class="btn btn-info btn-send" style="margin-right: 45%; position: relative; left: 0%;" data-dismiss="modal">OK</button>
     </div>
   </div>
 </div>
 </div>
 
-<div class="modal fade " id="PoliticaDP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="PoliticaDP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-xl modal-dialog-centered" role="document">
   <div class="modal-content" style="border-radius: 30px">
     <div class="modal-header modal-top">
-      <h5 class="desafio-title"> Política de Privacidade </h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" aria-label="Close">
+      <h5 class="desafio-title"> POLÍTICA DE PRIVACIDADE </h5>
+      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" 
+        aria-label="Close" style="right: -2%; margin-top: -3%;">
         <span aria-hidden="true" class="x">X</span></button>
     </div>
     <div class="modal-body" style="text-align: center;">
@@ -671,8 +673,8 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
 <div class="modal-dialog modal-xl" role="document">
   <div class="modal-content" style="border-radius: 30px">
     <div class="modal-header modal-top">
-      <h5 class="desafio-title"> Política de Privacidade </h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+      <h5 class="desafio-title"> POLÍTICA DE PRIVACIDADE </h5>
+      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close" style="right: -2%; margin-top: -3%;">
         <span aria-hidden="true" class="x">X</span></button>
     </div>
     <div class="modal-body" style="text-align: center;">
@@ -682,7 +684,7 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
       <br/> 
     </div>
     <div class="modal-footer">
-      <button class="btn btn-info btn-send" style="margin-left: 25%; margin-bottom: 5%" data-dismiss="modal">OK</button>
+      <button class="btn btn-info btn-send" style="margin-right: 45%; position: relative; left: 0%;" data-dismiss="modal">OK</button>
     </div>
   </div>
 </div>
@@ -704,53 +706,53 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
       <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-info btn-send" style="margin-left: 18%; margin-bottom: 7%" data-dismiss="modal">OK</button>
+      <button class="btn btn-info btn-send" style="margin-right: 36%; position: relative; left: 0%;" data-dismiss="modal">OK</button>
     </div>
   </div>
 </div>
 </div>
 
 <div class="modal fade" id="MentorDesafio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-dialog-centered" role="document">
-  <div class="modal-content" style="border-radius: 30px">
-    <div class="modal-header modal-top">
-      <h5 class="desafio-title">SOLICITAÇÃO DE MENTORIA</h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true" class="x">X</span></button>
-    </div>
-    <div class="modal-body" style="text-align: center;">
-      <form #mentoria="ngForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="area" [(ngModel)]="area" required>
-            <option hidden disabled selected>Escolha a área para a qual deseja mentoria</option>
-            <option>Administração e Negócios</option>
-            <option>Artes e Moda</option>
-            <option>Ciência da Computação</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="mentor" [(ngModel)]="mentor" required>
-            <option hidden disabled selected>Escolha um mentor</option>
-            <option>Bill Gates</option>
-            <option>Robert Downey Jr.</option>
-            <option>Steve Jobs</option>
-          </select>
-        </div>
-      <div class="input-group">
-        <textarea class="form-control scrll" rows="7" id="ideia" aria-label="With textarea" 
-          placeholder="Descreva como o mentor pode ajudá-lo neste projeto" name="texto"
-          style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" [(ngModel)]="texto" required></textarea>
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title">SOLICITAÇÃO DE MENTORIA</h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
       </div>
-    </form>
-    </div>
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" 
-        data-target="#MentorSucesso" [disabled]="mentoria.invalid">Enviar</button>
-      <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#MentorCancelar">Cancelar</button>
+      <div class="modal-body" style="text-align: center;">
+        <form #mentoria="ngForm">
+          <div class="form-group">
+            <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="area" required>
+              <option hidden disabled selected>Escolha a área para a qual deseja mentoria</option>
+              <option>Administração e Negócios</option>
+              <option>Artes e Moda</option>
+              <option>Ciência da Computação</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <select class="form-control" style="border-radius: 15px; color: #8E959B; height: 60px;" name="mentor" required>
+              <option hidden disabled selected>Escolha um mentor</option>
+              <option>Bill Gates</option>
+              <option>Robert Downey Jr.</option>
+              <option>Steve Jobs</option>
+            </select>
+          </div>
+          <div class="input-group">
+            <textarea class="form-control scrll" rows="7" id="ideia" aria-label="With textarea" name="texto" [(ngModel)]="texto"
+              placeholder="Descreva como o mentor pode ajudá-lo neste projeto" 
+              style="border-radius: 15px; resize: none; color: #8E959B; padding: 4% 3% 4% 3%;" required></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" 
+          data-target="#MentorSucesso" [disabled]="mentoria.invalid">Enviar</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" data-target="#MentorCancelar">Cancelar</button>
+      </div>
     </div>
   </div>
-</div>
 </div>
 
 <div class="modal fade" id="MentorSucesso" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -852,24 +854,24 @@ aria-hidden="true" data-backdrop="static" data-keyboard="false">
 </div>
 
 <div class="modal fade" id="EnviadaMsg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-dialog-centered" role="document">
-  <div class="modal-content" style="border-radius: 30px">
-    <div class="modal-header modal-top">
-      <h5 class="desafio-title">MENSAGEM ENVIADA</h5>
-      <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true" class="x">X</span></button>
-    </div>
-    <div class="modal-body" style="text-align: center;">
-      <label style="padding: 100px 0px; color: #9E9E9E;">Mensagem enviada com sucesso!</label>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-info btn-send" data-dismiss="modal">OK</button>
-      <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" 
-      data-target="#perfil">Sair</button>
+  aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content" style="border-radius: 30px">
+      <div class="modal-header modal-top">
+        <h5 class="desafio-title">MENSAGEM ENVIADA</h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="x">X</span></button>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        <label style="padding: 100px 0px; color: #9E9E9E;">Mensagem enviada com sucesso!</label>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-info btn-send" data-dismiss="modal">OK</button>
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" 
+        data-target="#perfil">Sair</button>
+      </div>
     </div>
   </div>
-</div>
 </div>
 
 
