--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
   <div class="container" style="margin-top: 250px">
     <div class="row">
       <div class="col-md-4">
-        <div class="row" id="icons" style="margin-top: 80px">
+        <div class="row" id="icons" style="margin-top: 80px; margin-left: -30px;">
           <div class="col-sm-3" id="icon"><a target="__blank"><img [src]="trof" alt=""></a>
             <h6 style="margin-left: 20%; color: #ffff;">Prêmios</h6>
           </div>
@@ -683,12 +683,12 @@
 
 <div class="modal fade " id="TermosDeUso" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true" data-backdrop="static" data-keyboard="false">
-  <div class="modal-dialog modal-xl" role="document">
+  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
     <div class="modal-content" style="border-radius: 30px">
       <div class="modal-header modal-top">
         <h5 class="desafio-title"> TERMOS DE USO </h5>
-        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal"
-          data-target="#TchunChecked" aria-label="Close">
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" 
+          data-target="#TchunChecked" aria-label="Close" style="right: -2%; margin-top: -3%;"> 
           <span aria-hidden="true" class="x">X</span></button>
       </div>
       <div class="modal-body" style="text-align: center;">
@@ -714,9 +714,9 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal"
+        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" style="left: 30%;"
           data-target="#TchunChecked">OK</button>
-        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal"
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" style="right: 30%;"
           data-target="#TchunProjeto">Cancelar</button>
       </div>
     </div>
@@ -729,8 +729,8 @@
     <div class="modal-content" style="border-radius: 30px">
       <div class="modal-header modal-top">
         <h5 class="desafio-title"> TERMOS DE USO </h5>
-        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" class="x">X</span></button>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close" style="right: -2%; margin-top: -3%;">
+        <span aria-hidden="true" class="x">X</span></button>
       </div>
       <div class="modal-body" style="text-align: center;">
         <br />
@@ -755,7 +755,7 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button class="btn btn-info btn-send" style="margin-left: 25%; margin-bottom: 5%"
+        <button class="btn btn-info btn-send" style="margin-right: 45%; position: relative; left: 0%;" 
           data-dismiss="modal">OK</button>
       </div>
     </div>
@@ -764,13 +764,13 @@
 
 <div class="modal fade " id="PoliticaDP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true" data-backdrop="static" data-keyboard="false">
-  <div class="modal-dialog modal-xl" role="document">
+  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
     <div class="modal-content" style="border-radius: 30px">
       <div class="modal-header modal-top">
-        <h5 class="desafio-title"> Política de Privacidade </h5>
-        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal"
-          data-target="#TchunChecked" aria-label="Close">
-          <span aria-hidden="true" class="x">X</span></button>
+        <h5 class="desafio-title"> POLÍTICA DE PRIVACIDADE </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" data-toggle="modal" data-target="#TchunChecked" 
+          aria-label="Close" style="right: -2%; margin-top: -3%;">
+        <span aria-hidden="true" class="x">X</span></button>
       </div>
       <div class="modal-body" style="text-align: center;">
         <br />
@@ -795,23 +795,23 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal"
+        <button class="btn btn-info btn-send" data-dismiss="modal" data-toggle="modal" style="left: 30%;"
           data-target="#TchunChecked">OK</button>
-        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal"
+        <button class="btn btn-lg btn-light btn-cancel" data-dismiss="modal" data-toggle="modal" style="right: 30%;"
           data-target="#TchunProjeto">Cancelar</button>
       </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade " id="PoliticaDP2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="PoliticaDP2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true" data-backdrop="static" data-keyboard="false">
-  <div class="modal-dialog modal-xl" role="document">
+  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
     <div class="modal-content" style="border-radius: 30px">
       <div class="modal-header modal-top">
-        <h5 class="desafio-title"> Política de Privacidade </h5>
-        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" class="x">X</span></button>
+        <h5 class="desafio-title"> POLÍTICA DE PRIVACIDADE </h5>
+        <button type="button" class="btn btn-light btn-x" data-dismiss="modal" aria-label="Close" style="right: -2%; margin-top: -3%;">
+        <span aria-hidden="true" class="x">X</span></button>
       </div>
       <div class="modal-body" style="text-align: center;">
         <br />
@@ -836,8 +836,8 @@
         <br />
       </div>
       <div class="modal-footer">
-        <button class="btn btn-info btn-send" style="margin-left: 25%; margin-bottom: 5%"
-          data-dismiss="modal">OK</button>
+        <button class="btn btn-info btn-send" style="margin-right: 45%; position: relative; left: 0%;" 
+        data-dismiss="modal">OK</button>
       </div>
     </div>
   </div>
